--- a/namsan.html
+++ b/namsan.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="namsan.css">
+	<link rel="stylesheet" href="css/namsan.css">
 </head>
 <body>
 	<div class="container">
